--- a/13-overdispersed-glms.Rmd
+++ b/13-overdispersed-glms.Rmd
@@ -86,13 +86,13 @@ Let's fit a GLM with a Poisson distribution and a log link even though we know t
 plot_glm(m_poisson, d)
 ```
 
-If we look at the residuals, these should be constant with the predicted mean value. It can be hard to see these patterns in the residuals. There is not a lot to see here even though we know there is over dispersion.  
+If we look at the residuals, these should be constant with the predicted mean value. It can be hard to see these patterns in the residuals. There is not a lot to see here even though we know there is overdispersion.  
 
 ```{r}
 plot(fitted(m_poisson), residuals(m_poisson))
 ```
 
-We can also look at whether the deviance is approximately equal to the residual degrees of freedom. If the deviance is higher than that is evidence of overdispersion.
+We can also look at whether the deviance is approximately equal to the residual degrees of freedom. If the deviance is much higher then that is evidence of overdispersion.
 
 ```{r}
 deviance(m_poisson)/m_poisson$df.residual
@@ -117,7 +117,7 @@ confint(m_qp)
 confint(m_poisson)
 ```
 
-What you notice about the confidence intervals in these 2 models? 
+What do you notice about the confidence intervals in these 2 models? 
 
 # Quasibinomial, logit link
 
