--- a/13-overdispersed-glms.Rmd
+++ b/13-overdispersed-glms.Rmd
@@ -102,7 +102,7 @@ We can also statistically test that:
 
 ```{r}
 # Cameron, A.C. & Trivedi, P.K. (1990). Regression-based tests for overdispersion in the Poisson model. Journal of Econometrics, 46, 347–364.
-AER::dispersiontest(m_poisson) 
+AER::dispersiontest(m_poisson)
 ```
 
 To deal with the overdispersion, we will refit our model with the quasipoisson family. This simply estimates how overdispersed the data are and scales the standard errors on our parameter estimates appropriately.
@@ -150,8 +150,9 @@ par(mfrow = c(1, 1))
 plot(table(y/n)/length(y), xlim = c(0, 1), ylab = "prop.", col = "grey80")
 abline(v = 0.5, col = "black", lwd = 10)
 
+ss <- rep(n, length(y))
 m <- glm(y/n ~ 1, family = binomial(link = "logit"),
-  weights = rep(n, length(y)))
+  weights = ss)
 ci <- inverse_logit(confint(m))
 abline(v = ci, col = "red", lwd = 5)
 
