--- a/13-overdispersed-glms.Rmd
+++ b/13-overdispersed-glms.Rmd
@@ -23,24 +23,13 @@ We'll start by generating count data that we know are overdispersed for a Poisso
 ```{r}
 library(ggplot2)
 library(dplyr)
+library(sjPlot)
 set.seed(111)
 N <- 500
 x <- runif(N, -1, 1)
 a <- 0.5
 b <- 1.3
 d <- data_frame(x = x)
-plot_glm <- function(model, dat) {
-  fit <- predict(model, type = "link", se = FALSE)
-  se <- predict(model, type = "link", se = TRUE)$se
-  dat$lwr <- family(model)$linkinv(fit - 1.96 * se)
-  dat$upr <- family(model)$linkinv(fit + 1.96 * se)
-  dat$fit <- family(model)$linkinv(fit)
-  p <- ggplot(dat) + geom_point(aes(x, y), alpha = 0.6) + 
-    geom_line(aes(x, fit), colour = "red", lwd = 1) +
-    geom_ribbon(aes(x, ymax = upr, ymin = lwr), alpha = 0.2)
-  print(p)
-  invisible(p)
-}
 inverse_logit <- function(x) plogis(x)
 ```
 
@@ -83,7 +72,11 @@ Let's fit a GLM with a Poisson distribution and a log link even though we know t
 
 ```{r}
 (m_poisson <- glm(y ~ x, family = poisson(link = "log")))
-plot_glm(m_poisson, d)
+
+p <- sjp.glm(m_poisson, type = "eff", show.ci = TRUE, prnt.plot = FALSE)
+ggplot(p$data, aes(x, y, ymin = conf.low, ymax = conf.high)) +
+  geom_ribbon(size = 1, alpha = 0.2) + geom_line(colour = "red") + 
+  geom_point(data = d, aes(x = x, y = y), inherit.aes = FALSE)
 ```
 
 If we look at the residuals, these should be constant with the predicted mean value. It can be hard to see these patterns in the residuals. There is not a lot to see here even though we know there is overdispersion.  
